--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "body-parser": "~1.10.2",
     "cookie-parser": "~1.3.3",
     "cors": "^2.5.3",
+    "cron": "^1.0.8",
     "debug": "~2.1.1",
     "ejs": "~2.2.3",
     "express": "~4.11.1",
@@ -16,8 +17,10 @@
     "express-session": "^1.10.2",
     "jsonwebtoken": "^3.2.2",
     "method-override": "^2.3.1",
+    "moment-timezone": "^0.3.0",
     "morgan": "~1.5.1",
     "mysql": "^2.5.4",
+    "node-mysql": "^0.4.2",
     "passport": "^0.2.1",
     "serve-favicon": "~2.2.0"
   }
