--- a/package.json
+++ b/package.json
@@ -7,10 +7,13 @@
   },
   "dependencies": {
     "body-parser": "~1.10.2",
+    "connect": "^3.3.4",
+    "connect-multiparty": "^1.2.5",
     "cookie-parser": "~1.3.3",
     "cors": "^2.5.3",
     "cron": "^1.0.8",
     "debug": "~2.1.1",
+    "easyimage": "^1.2.2",
     "ejs": "~2.2.3",
     "express": "~4.11.1",
     "express-myconnection": "^1.0.4",
@@ -19,6 +22,7 @@
     "method-override": "^2.3.1",
     "moment-timezone": "^0.3.0",
     "morgan": "~1.5.1",
+    "multer": "^0.1.8",
     "mysql": "^2.5.4",
     "node-mysql": "^0.4.2",
     "passport": "^0.2.1",
