--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "express": "~4.11.1",
     "express-myconnection": "^1.0.4",
     "express-session": "^1.10.2",
+    "jquery": "^2.1.3",
+    "jquery-ui": "^1.10.5",
     "jsonwebtoken": "^3.2.2",
     "method-override": "^2.3.1",
     "moment-timezone": "^0.3.0",
